Make labels more wider...

--- a/src/main/resources/main.fxml
+++ b/src/main/resources/main.fxml
@@ -5,17 +5,17 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="200.0" prefWidth="274.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chntu_team.eapi_lab_1.MainController">
+<AnchorPane prefHeight="225.0" prefWidth="322.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chntu_team.eapi_lab_1.MainController">
    <children>
-      <TextField fx:id="toEncryptInput" alignment="CENTER" layoutX="22.0" layoutY="71.0" prefHeight="30.0" prefWidth="235.0" />
-      <Button layoutX="21.0" layoutY="159.0" mnemonicParsing="false" onMouseClicked="#onEncrypt" prefHeight="25.0" prefWidth="115.0" text="Зашифрувати" />
-      <Button layoutX="142.0" layoutY="159.0" mnemonicParsing="false" onMouseClicked="#onDecrypt" prefHeight="25.0" prefWidth="115.0" text="Розшифрувати " />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="22.0" layoutY="104.0" prefHeight="17.0" prefWidth="235.0" text="Результат" textAlignment="CENTER" />
-      <TextField fx:id="resultInput" alignment="CENTER" editable="false" layoutX="22.0" layoutY="122.0" prefHeight="25.0" prefWidth="235.0" promptText="Тут буде результат :)" />
-      <TextField fx:id="colKeyInput" layoutX="21.0" layoutY="25.0" prefHeight="25.0" prefWidth="107.0" />
-      <TextField fx:id="rowKeyInput" layoutX="142.0" layoutY="25.0" prefHeight="25.0" prefWidth="115.0" />
-      <Label alignment="CENTER" layoutX="22.0" layoutY="52.0" prefHeight="17.0" prefWidth="235.0" text="Текст для шифрування" textAlignment="CENTER" />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="9.0" layoutY="6.0" prefHeight="17.0" prefWidth="124.0" text="Ключ для колонок" textAlignment="CENTER" />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="134.0" layoutY="6.0" prefHeight="17.0" prefWidth="132.0" text="Ключ для стовбців" textAlignment="CENTER" />
+      <TextField fx:id="toEncryptInput" alignment="CENTER" layoutX="22.0" layoutY="86.0" prefHeight="30.0" prefWidth="280.0" />
+      <Button layoutX="22.0" layoutY="181.0" mnemonicParsing="false" onMouseClicked="#onEncrypt" prefHeight="25.0" prefWidth="137.0" text="Зашифрувати" />
+      <Button layoutX="165.0" layoutY="181.0" mnemonicParsing="false" onMouseClicked="#onDecrypt" prefHeight="25.0" prefWidth="137.0" text="Розшифрувати " />
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="22.0" layoutY="119.0" prefHeight="20.0" prefWidth="280.0" text="Результат" textAlignment="CENTER" />
+      <TextField fx:id="resultInput" alignment="CENTER" editable="false" layoutX="22.0" layoutY="143.0" prefHeight="25.0" prefWidth="280.0" promptText="Тут буде результат :)" />
+      <TextField fx:id="colKeyInput" layoutX="21.0" layoutY="34.0" prefHeight="25.0" prefWidth="137.0" />
+      <TextField fx:id="rowKeyInput" layoutX="165.0" layoutY="34.0" prefHeight="25.0" prefWidth="137.0" />
+      <Label alignment="CENTER" layoutX="22.0" layoutY="61.0" prefHeight="20.0" prefWidth="280.0" text="Текст для шифрування" textAlignment="CENTER" />
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="15.0" layoutY="15.0" prefHeight="17.0" prefWidth="146.0" text="Ключ для стовбців" textAlignment="CENTER" />
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="159.0" layoutY="15.0" prefHeight="17.0" prefWidth="146.0" text="Ключ для рядків" textAlignment="CENTER" />
    </children>
 </AnchorPane>
